--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -118,6 +118,14 @@
     "Lookup.Organization": "Organization",
     "LookupDetail.LookupDetails": "Lookup Details",
     "LookupDetail.Id": "Detail ID",
-    "LookupDetail.Lookup": "Lookup"
+    "LookupDetail.Lookup": "Lookup",
+    "StudentAttendance.Attendance": "Attendance",
+    "StudentAttendance.StudentAttendanceClassPk": "Record ID",
+    "StudentAttendance.StudentName": "Student Name",
+    "StudentAttendance.PaymentStatusName": "Payment Status",
+    "StudentAttendance.ClassEvalution": "Class Evaluation",
+    "StudentAttendance.Comment": "comment"
+
+
 
 }
