--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -1,4 +1,5 @@
 {
+    "app-name":"مركز الخريطيات التعليمي",
     "login": "تسجيل الدخول",
     "username": "اسم المستخدم",
     "password": "كلمة المرور",
