--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -1,4 +1,5 @@
 {
+    "app-name":"AL-Kharaitiyat Educational Center",
     "login": "Login",
     "username": "Username",
     "password": "Password",
