--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -1,5 +1,6 @@
 {
     "app-name":"مركز الخريطيات التعليمي",
+    "taglineOne": " مدرسون ومدرّسات متخصصون في جميع المراحل التعليمية والمناهج، ودورات تأسيس للأطفال والكبار: إنجليزي، رياضيات، عربي، وجميع المواد.",
     "login": "تسجيل الدخول",
     "username": "اسم المستخدم",
     "password": "كلمة المرور",
