--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -1,5 +1,6 @@
 {
     "app-name":"AL-Kharaitiyat Educational Center",
+    "taglineOne": "Specialist male and female teachers for all grades and curricula, with foundation courses for children and adults in English, Math, Arabic, and all subjects.",
     "login": "Login",
     "username": "Username",
     "password": "Password",
