--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -67,6 +67,7 @@
     "Class.ActualEndTime": "نهاية فعلية",
     "Class.Finished": "المنتهية",
     "Class.Remaining": "المتبقية",
+    "Class.DailyClass": "حصص اليوم",
     "Class.Notes": "ملاحظات",
     "Class.LocationStartLat": "خط عرض البداية",
     "Class.LocationStartLong": "خط طول البداية",
