--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -176,6 +176,10 @@
     "Months": {
         "Full": ["يناير","فبراير","مارس","أبريل","مايو","يونيو","يوليو","أغسطس","سبتمبر","أكتوبر","نوفمبر","ديسمبر"],
         "Short": ["ينا","فبر","مار","أبر","ماي","يون","يول","أغس","سبت","أكت","نوف","ديس"]
+    },
+    "Validation": {
+    "UsernameRequired": "ادخل اسم المستخدم",
+    "PasswordRequired": "ادخل كلمة المرور"
     }
 
 
