--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -176,6 +176,10 @@
     "Months": {
         "Full": ["January","February","March","April","May","June","July","August","September","October","November","December"],
         "Short": ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"]
+    },
+    "Validation": {
+    "UsernameRequired": "Username is required",
+    "PasswordRequired": "Password is required"
     }
 
 }
