--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -164,6 +164,13 @@
     "Reports.Types.Attendance": "الحضور",
     "Reports.Types.Payments": "المدفوعات",
     "Reports.Types.TeacherCourses": "دورات المعلم",
+    "Footer.Contact": "تواصل معنا",
+    "Footer.Email": "البريد الإلكتروني",
+    "Footer.Phone": "الهاتف",
+    "Footer.WhatsApp": "واتساب",
+    "Footer.License": "الترخيص",
+    "Footer.Address": "العنوان",
+    "Footer.AllRights": "جميع الحقوق محفوظة",
     "Footer.Copyright": "حقوق النشر © {{year}} جميع الحقوق محفوظة",
     "Home.CenterTeachingExperts": "خبراء التعليم في المركز",
     "Home.CenterStats": "إحصائيات المركز",
