--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -2,6 +2,8 @@
     "app-name":"مركز الخريطيات التعليمي",
     "taglineOne": " مدرسون ومدرّسات متخصصون في جميع المراحل التعليمية والمناهج، ودورات تأسيس للأطفال والكبار: إنجليزي، رياضيات، عربي، وجميع المواد.",
     "login": "تسجيل الدخول",
+    "adminLogin": "تسجيل دخول المشرفين",
+    "homePage": "الصفحة الرئيسية",
     "username": "اسم المستخدم",
     "password": "كلمة المرور",
     "logout": "تسجيل الخروج",
