--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -77,6 +77,7 @@
     "Class.LocationEndLat": "End Latitude",
     "Class.LocationEndLong": "End Longitude",
     "CourseStudent.Students": "Students",
+    "CourseStudent.SelectStudent": "Select Student",
     "CourseStudent.CourseStudentPk": "Student ID",
     "CourseStudent.Student": "Student",
     "CourseStudent.TeacherCourse": "Course/Class",
