--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -29,7 +29,7 @@
     "TeacherCourse.courseDetails": "تفاصيل الكورس",
     "TeacherCourse.classes-students": "الحصص / الطلاب",
     "TeacherCourse.TeacherCoursePk": "رمز",
-    "TeacherCourse.Name": "اسم الكورس",
+    "TeacherCourse.Name": "اسم الدورة",
     "TeacherCourse.AcademicYear": "السنة الدراسية",
     "TeacherCourse.AcademicTerm": "الفصل الدراسي",
     "TeacherCourse.Teacher": "المعلّم",
