--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -60,6 +60,7 @@
     "Class.ExpectedEndTime": "Expected End Time",
     "Class.PaidToCenter": "Paid to Center",
     "Class.PaidToTeacher": "Paid to Teacher",
+    "Class.Paid": "Paid",
     "Class.ActualAmountRequired": "Actual Amount Required",
     "Class.ActualPayedAmount": "Actual Amount Paid",
     "Class.CostForStudent": "Cost for Student",
@@ -152,6 +153,12 @@
     "FinancialTransactions.SubjectName": "Subject Name",
     "FinancialTransactions.ReferenceNo": "Reference No.",
     "FinancialTransactions.Notes": "Notes",
+    "FinancialTransactions.CenterDue": "Center Due",
+    "FinancialTransactions.TeacherDue": "Teacher Due",
+    "FinancialTransactions.StudentPayments": "Student Payments",
+    "FinancialTransactions.PayTransaction": "Pay Transaction",
+    "FinancialTransactions.Details": "Financial Transaction Details",
+    "FinancialTransactions.PayAll": "Pay All",
     "Reports.Title": "Reports",
     "Reports.ReportType": "Report Type",
     "Reports.StartDate": "Start Date",
