--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -28,7 +28,7 @@
     "validation.invalid": "قيمة غير صحيحة" ,
     "TeacherCourse.courseDetails": "تفاصيل الدورة",
     "TeacherCourse.classes-students": "الحصص / الطلاب",
-    "TeacherCourse.TeacherCoursePk": "رمز",
+    "TeacherCourse.TeacherCoursePk": "رقم الدورة",
     "TeacherCourse.Name": "اسم الدورة",
     "TeacherCourse.students": "الطلاب المسجلين في الدورة",
     "TeacherCourse.AcademicYear": "السنة الدراسية",
@@ -52,7 +52,7 @@
     "TeacherCourse.Notes": "ملاحظات",
     "Class.Classes": "الحصص",
     "Class.ClassDetails": "تفاصيل الحصة",
-    "Class.ClassPk": "رمز الحصة",
+    "Class.ClassPk": "رقم الحصة",
     "Class.Title": "عنوان الحصة",
     "Class.TeacherCourse": "الكورس / الشعبة",
     "Class.Location": "المكان",
@@ -62,6 +62,7 @@
     "Class.ExpectedEndTime": "نهاية متوقعة",
     "Class.PaidToCenter": "مدفوع للمركز",
     "Class.PaidToTeacher": "مدفوع للمعلم",
+    "Class.Paid": "مدفوع",
     "Class.ActualAmountRequired": "المبلغ المطلوب فعليًا",
     "Class.ActualPayedAmount": "المبلغ المدفوع فعليًا",
     "Class.CostForStudent": "تكلفة الطالب",
@@ -80,7 +81,7 @@
     "Class.LocationEndLong": "خط طول النهاية",
     "CourseStudent.Students": "الطلاب",
     "CourseStudent.SelectStudent": "اختر الطالب",
-    "CourseStudent.CourseStudentPk": "رمز الطالب",
+    "CourseStudent.CourseStudentPk": "رقم الطالب",
     "CourseStudent.Student": "الطالب",
     "CourseStudent.TeacherCourse": "الكورس / الشعبة",
     "CourseStudent.JoinStatus": "حالة الالتحاق",
@@ -154,6 +155,12 @@
     "FinancialTransactions.SubjectName": "اسم المادة",
     "FinancialTransactions.ReferenceNo": "رقم المرجع",
     "FinancialTransactions.Notes": "ملاحظات",
+    "FinancialTransactions.CenterDue": "مستحق للمركز",
+    "FinancialTransactions.TeacherDue": "مستحق للمعلم",
+    "FinancialTransactions.StudentPayments": "مدفوعات الطلاب",
+    "FinancialTransactions.PayTransaction": "دفع المعاملة",
+    "FinancialTransactions.Details": "تفاصيل المعاملة المالية",
+    "FinancialTransactions.PayAll": "دفع الكل",
     "Reports.Title": "التقارير",
     "Reports.ReportType": "نوع التقرير",
     "Reports.StartDate": "تاريخ البداية",
