--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -26,10 +26,11 @@
     "validation.required": "هذا الحقل مطلوب",
     "validation.requiredSelect": "يرجى اختيار قيمة",
     "validation.invalid": "قيمة غير صحيحة" ,
-    "TeacherCourse.courseDetails": "تفاصيل الكورس",
+    "TeacherCourse.courseDetails": "تفاصيل الدورة",
     "TeacherCourse.classes-students": "الحصص / الطلاب",
     "TeacherCourse.TeacherCoursePk": "رمز",
     "TeacherCourse.Name": "اسم الدورة",
+    "TeacherCourse.students": "الطلاب المسجلين في الدورة",
     "TeacherCourse.AcademicYear": "السنة الدراسية",
     "TeacherCourse.AcademicTerm": "الفصل الدراسي",
     "TeacherCourse.Teacher": "المعلّم",
@@ -129,7 +130,7 @@
     "LookupDetail.LookupDetails": "تفاصيل القوائم",
     "LookupDetail.Id": "رقم التفصيل",
     "LookupDetail.Lookup": "القائمة",
-    "StudentAttendance.Attendance": "الحضور",
+    "StudentAttendance.Attendance": "الحضور للحصة",
     "StudentAttendance.StudentAttendanceClassPk": "رقم السجل",
     "StudentAttendance.StudentName": "اسم الطالب",
     "StudentAttendance.PaymentStatusName": "حالة السداد",
