--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -143,8 +143,8 @@
     "FinancialTransactions.TransactionType": "نوع العملية",
     "FinancialTransactions.PaymentMethod": "طريقة الدفع",
     "FinancialTransactions.Status": "الحالة",
-    "FinancialTransactions.PayerName": "اسم الدافع",
-    "FinancialTransactions.PayeeName": "اسم المستلم",
+    "FinancialTransactions.PayerName": " اسم الدافع",
+    "FinancialTransactions.PayeeName": "اسم المستفيد",
     "FinancialTransactions.ReceiverName": "اسم المُحصِّل",
     "FinancialTransactions.AmountTotal": "المبلغ الكلي",
     "FinancialTransactions.AmountPaid": "المبلغ المدفوع",
@@ -161,6 +161,7 @@
     "FinancialTransactions.PayTransaction": "دفع المعاملة",
     "FinancialTransactions.Details": "تفاصيل المعاملة المالية",
     "FinancialTransactions.PayAll": "دفع الكل",
+    "FinancialTransactions.Currency": "﷼",
     "Reports.Title": "التقارير",
     "Reports.ReportType": "نوع التقرير",
     "Reports.StartDate": "تاريخ البداية",
