--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -26,6 +26,7 @@
     "validation.required": "هذا الحقل مطلوب",
     "validation.requiredSelect": "يرجى اختيار قيمة",
     "validation.invalid": "قيمة غير صحيحة" ,
+    "validation.endDateBeforeStart": "تاريخ الانتهاء يجب أن يكون بعد تاريخ البداية",
     "TeacherCourse.courseDetails": "تفاصيل الدورة",
     "TeacherCourse.classes-students": "الحصص / الطلاب",
     "TeacherCourse.TeacherCoursePk": "رقم الدورة",
@@ -170,6 +171,7 @@
     "Reports.Course": "الدورة",
     "Reports.Teacher": "المعلم",
     "Reports.Student": "الطالب",
+    "Reports.User": "المستخدم",
     "Reports.FilterType": "نوع التصفية",
     "Reports.Download": "تنزيل التقرير",
     "Reports.Downloading": "جاري التنزيل…",
