--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -25,6 +25,8 @@
     "message.areYouSure": "Are you sure you want to delete?",
     "validation.required": "This field is required",
     "validation.requiredSelect": "Please select a value",
+    "validation.invalid": "Invalid value" ,
+    "validation.endDateBeforeStart": "End date must be after start date",
     "TeacherCourse.courseDetails": "Course Details",
     "TeacherCourse.classes-students": "Classes / Students",
     "TeacherCourse.TeacherCoursePk": "ID",
@@ -169,6 +171,7 @@
     "Reports.Course": "Course",
     "Reports.Teacher": "Teacher",
     "Reports.Student": "Student",
+    "Reports.User": "User",
     "Reports.FilterType": "Filter Type",
     "Reports.Download": "Download Report",
     "Reports.Downloading": "Downloading…",
