--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -21,8 +21,21 @@
     "label.cancel": "إلغاء",
     "label.reset": "إعادة تعيين",
     "label.find":"بحث",
+    "label.confirmation": "تأكيد",
+    "label.success": "نجاح",
+    "label.error": "خطأ",
+    "label.warning": "تحذير",
+    "label.info": "معلومة",
+     "label.discard": "تجاهل",
+    "message.savedSuccessfully": "تم الحفظ بنجاح",
+    "message.operationFailed": "فشلت العملية",
+    "message.deletedSuccessfully": "تم الحذف بنجاح",
+    "message.updatedSuccessfully": "تم التحديث بنجاح",
+    "message.somethingWentWrong": "حدث خطأ ما، حاول مرة أخرى",
     "message.success": "تمت العملية بنجاح",
     "message.areYouSure": "هل انت متأكد من الحذف",
+    "message.confirmPayment": "هل أنت متأكد من الدفع؟",
+    "message.unsavedChanges": "لديك تغييرات غير محفوظة. ماذا تريد أن تفعل؟",
     "validation.required": "هذا الحقل مطلوب",
     "validation.requiredSelect": "يرجى اختيار قيمة",
     "validation.invalid": "قيمة غير صحيحة" ,
@@ -50,6 +63,8 @@
     "TeacherCourse.Organization": "المركز",
     "TeacherCourse.CreationDate": "تاريخ الإنشاء",
     "TeacherCourse.ModifiedDate": "تاريخ التعديل",
+    "TeacherCourse.StartDate": "تاريخ البداية",
+    "TeacherCourse.EndDate": "تاريخ النهاية",
     "TeacherCourse.Notes": "ملاحظات",
     "Class.Classes": "الحصص",
     "Class.ClassDetails": "تفاصيل الحصة",
@@ -236,5 +251,7 @@
     "Organization.ExpirationDate": "تاريخ الانتهاء",
     "Organization.Address": "العنوان",
     "Organization.Lat": "خط العرض",
-    "Organization.Long": "خط الطول"
+    "Organization.Long": "خط الطول",
+    "error.unknown": "خطأ غير معروف",
+    "error.unauthorized": "عفواً ... انتهت جلسة العمل أو ليس لك صلاحية الدخول لهذه الصفحة"
 }
