--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -21,8 +21,21 @@
     "label.cancel": "Cancel",
     "label.reset": "Reset",
     "label.find":"Find",
+    "label.confirmation": "Confirmation",
+    "label.success": "Success",
+    "label.error": "Error",
+    "label.warning": "Warning",
+    "label.info": "Info",
+    "label.discard": "Discard",
+    "message.savedSuccessfully": "Saved successfully",
+    "message.operationFailed": "Operation failed",
+    "message.deletedSuccessfully": "Deleted successfully",
+    "message.updatedSuccessfully": "Updated successfully",
+    "message.somethingWentWrong": "Something went wrong, please try again",
     "message.success": "Operation completed successfully",
     "message.areYouSure": "Are you sure you want to delete?",
+    "message.confirmPayment": "Are you sure you want to proceed with the payment?",
+    "message.unsavedChanges": "You have unsaved changes. What would you like to do?",
     "validation.required": "This field is required",
     "validation.requiredSelect": "Please select a value",
     "validation.invalid": "Invalid value" ,
@@ -50,6 +63,8 @@
     "TeacherCourse.Organization": "Organization",
     "TeacherCourse.CreationDate": "Creation date",
     "TeacherCourse.ModifiedDate": "Modified date",
+    "TeacherCourse.StartDate": "Start Date",
+    "TeacherCourse.EndDate": "End Date",
     "TeacherCourse.Notes": "Notes",
     "Class.Classes": "Classes",
     "Class.ClassDetails": "Class Details",
@@ -236,5 +251,7 @@
     "Organization.ExpirationDate": "Expiration Date",
     "Organization.Address": "Address",
     "Organization.Lat": "Latitude",
-    "Organization.Long": "Longitude"
+    "Organization.Long": "Longitude",
+    "error.unknown": "Unknown error",
+    "error.unauthorized": "Sorry... Your session has expired or you do not have permission to access this page"
 }
