--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -26,7 +26,7 @@
     "label.error": "خطأ",
     "label.warning": "تحذير",
     "label.info": "معلومة",
-     "label.discard": "تجاهل",
+    "label.discard": "تجاهل",
     "message.savedSuccessfully": "تم الحفظ بنجاح",
     "message.operationFailed": "فشلت العملية",
     "message.deletedSuccessfully": "تم الحذف بنجاح",
@@ -124,6 +124,7 @@
     "User.UserType": "نوع المستخدم",
     "User.DateOfBirth": "تاريخ الميلاد",
     "User.Status": "نشط",
+    "User.Active":"مُفعل" ,
     "User.Organization": "الجهة",
     "User.Stage": "المرحلة",
     "User.Level": "الصف",
