--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -123,7 +123,8 @@
     "User.Nationality": "Nationality",
     "User.UserType": "User Type",
     "User.DateOfBirth": "Date of Birth",
-    "User.Status": "Active",
+    "User.Status": "Enabled",
+    "User.Active":"Active" ,
     "User.Organization": "Organization",
     "User.Stage": "Stage",
     "User.Level": "Level",
