org phones number

--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -245,6 +245,9 @@
     "Organization.City": "المدينة",
     "Organization.Email": "البريد الإلكتروني",
     "Organization.PhoneNumber": "رقم الهاتف",
+    "Organization.PhoneNumber1":" رقم الهاتف 1",
+    "Organization.PhoneNumber2":" رقم الهاتف 2",
+    "Organization.PhoneNumber3":" رقم الهاتف 3",
     "Organization.WhatsappNumber": "واتساب",
     "Organization.LogoUrl": "شعار المركز",
     "Organization.StatusFl": "الحالة",
