--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -245,6 +245,9 @@
     "Organization.City": "City",
     "Organization.Email": "Email",
     "Organization.PhoneNumber": "Phone Number",
+     "Organization.PhoneNumber1":"Phone Number 1",
+    "Organization.PhoneNumber2":"Phone Number 2",
+    "Organization.PhoneNumber3":"Phone Number 3",
     "Organization.WhatsappNumber": "WhatsApp",
     "Organization.LogoUrl": "Logo URL",
     "Organization.StatusFl": "Status",
